# devsecops-pipeline

./: .env.example  .gitignore  .gitleaks.toml  Makefile  README.md  pyproject.toml
.github/workflows/: devsecops.yml
app/: .dockerignore  Dockerfile  __init__.py  main.py  requirements-dev.txt  requirements.txt
app/tests/: test_main.py
k8s/: deployment.yaml
policy/: deployment.rego  deployment_test.rego
policy/conftest/inputs/: deployment-fail.yaml  deployment-pass.yaml
terraform/: main.tf
